shipping clean up

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,3 +54,6 @@ jobs:
 
       - name: Build Docker image
         run: make docker-build
+
+      - name: docker airflow
+        run: make docker-build-airflow
