--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,8 +1,10 @@
 name: CD
 
 on:
-  push:
+  workflow_run:
+    workflows: ["CI"]
     branches: [main]
+    types: [completed]
   workflow_dispatch:
 
 concurrency:
@@ -10,23 +12,11 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  check-ci:
-    name: Check CI Status
-    runs-on: ubuntu-latest
-    steps:
-      - name: Wait for CI to complete
-        uses: lewagon/wait-on-check-action@v1.3.1
-        with:
-          ref: ${{ github.ref }}
-          check-name: 'Docker Build'   # must exactly match the CI check name
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          wait-interval: 10
-
-  deploy:
+  deploy: 
     name: Deploy to EC2 Production
     runs-on: ubuntu-latest
-    needs: [check-ci]
     environment: production
+    if: ${{ github.event_name == 'workflow_dispatch' || github.event.workflow_run.conclusion == 'success' }}
 
     steps:
       - name: Configure SSH
@@ -41,16 +31,16 @@ jobs:
           EC2_HOST: ${{ secrets.EC2_HOST }}
           EC2_USERNAME: ${{ secrets.EC2_USERNAME }}
           REPO: ${{ github.repository }}
-          SHA: ${{ github.sha }}
+          SHA: ${{ github.event_name == 'workflow_dispatch' && github.sha || github.event.workflow_run.head_sha }}
           ACTOR: ${{ github.actor }}
         run: |
-          ssh -i ~/.ssh/deploy_key $EC2_USERNAME@$EC2_HOST bash -s << ENDSSH
+          ssh -i ~/.ssh/deploy_key $EC2_USERNAME@$EC2_HOST bash -s << 'ENDSSH'
             set -euo pipefail
 
             echo "=========================================="
             echo "🚀 Starting Deployment to Production"
             echo "=========================================="
-            echo "Time: \$(date)"
+            echo "Time: $(date)"
             echo "Repo: ${REPO}"
             echo "Commit: ${SHA}"
             echo "Actor: ${ACTOR}"
@@ -58,51 +48,37 @@ jobs:
 
             cd ~/Tech_Product_Expert
 
-            echo "📌 Current version:"
-            git log -1 --oneline || true
+            # Safety (optional but good)
+            git config --global --add safe.directory "$(pwd)"
 
-            echo ""
-            echo "📊 Current container status:"
-            cd airflow-docker && docker compose ps || true
-            cd ..
-
-            echo ""
             echo "📥 Pulling latest changes from GitHub..."
             git fetch origin
             git reset --hard origin/main
 
-            echo ""
-            echo "📌 New version:"
-            git log -1 --pretty=format:"Commit: %h%nAuthor: %an%nDate: %ar%nMessage: %s"
-            echo ""
-
             cd airflow-docker
 
-            echo ""
+            echo "📊 Current container status:"
+            docker-compose ps || true
+
             echo "🛑 Stopping containers gracefully..."
-            docker compose down --timeout 30
+            docker-compose down --timeout 30
 
-            echo ""
             echo "🔨 Building and starting containers..."
-            docker compose up -d --build --force-recreate
+            docker-compose up -d --build --force-recreate
 
-            echo ""
             echo "⏳ Waiting for services to start..."
             sleep 45
 
-            echo ""
             echo "✅ Deployment Complete"
-            docker compose ps
+            docker-compose ps
           ENDSSH
 
       - name: Verify Deployment (via domain)
         run: |
           set -e
           echo "🔍 Verifying deployment..."
-
           sleep 15
 
-          echo "Checking NGINX/domain..."
           HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" https://techtalkrag.com || true)
           echo "Domain returned HTTP $HTTP_CODE"
 
