--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -50,7 +50,7 @@ jobs:
 
             echo "📥 Pulling latest changes from GitHub..."
             git fetch origin
-            git reset --hard origin/main
+            git reset --hard origin/demo
 
             cd airflow-docker
 
